--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
     environment {
         DOCKER_IMAGE = 'rutujapawal/example-html-project'
-        DOCKER_BIN = '/usr/bin/docker' // Update this with the path to your docker binary
     }
     stages {
         stage('Checkout') {
@@ -13,14 +12,16 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    def customImage = sh(script: "${env.DOCKER_BIN} build -t ${DOCKER_IMAGE} .", returnStdout: true).trim()
+                    docker.build(DOCKER_IMAGE)
                 }
             }
         }
         stage('Run Docker Container') {
             steps {
                 script {
-                    sh "${env.DOCKER_BIN} run -d -p 8000:80 --name html-container ${DOCKER_IMAGE}"
+                        docker.image(DOCKER_IMAGE).inside {
+                        sh 'docker run -d -p 8000:80 --name html-container ${DOCKER_IMAGE}'
+                    }
                 }
             }
         }
