--- a/jenkinsfile
+++ b/jenkinsfile
@@ -12,14 +12,14 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    docker.build(DOCKER_IMAGE)
+                    def customImage = docker.build("${DOCKER_IMAGE}")
                 }
             }
         }
         stage('Run Docker Container') {
             steps {
                 script {
-                        docker.image(DOCKER_IMAGE).inside {
+                    docker.image("${DOCKER_IMAGE}").inside {
                         sh 'docker run -d -p 8000:80 --name html-container ${DOCKER_IMAGE}'
                     }
                 }
