--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,6 +2,7 @@ pipeline {
     agent any
     environment {
         DOCKER_IMAGE = 'rutujapawal/example-html-project'
+        DOCKER_BIN = '/usr/bin/docker'
     }
     stages {
         stage('Checkout') {
@@ -12,15 +13,15 @@ pipeline {
         stage('Build Docker Image') {
             steps {
                 script {
-                    def customImage = docker.build("${DOCKER_IMAGE}")
+                    def customImage = sh(script: "${env.DOCKER_BIN} build -t ${DOCKER_IMAGE} .", returnStdout: true).trim()
                 }
             }
         }
         stage('Run Docker Container') {
             steps {
                 script {
-                    docker.image("${DOCKER_IMAGE}").inside {
-                        sh 'docker run -d -p 8000:80 --name html-container ${DOCKER_IMAGE}'
+                    {
+                     sh "${env.DOCKER_BIN} run -d -p 8000:80 --name html-container ${DOCKER_IMAGE}"
                     }
                 }
             }
