--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
     stages {
         stage('Checkout') {
             steps {
-                git 'git https://github.com/RutujaPawal/example-html-project.git'
+                git 'https://github.com/RutujaPawal/example-html-project.git'
             }
         }
         stage('Build Docker Image') {
